--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -8,13 +8,15 @@ spring.datasource.password=
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #################
-server.port=8100
+server.port=8090
 ###############
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://eureka-server:8036/eureka/
-eureka.instance.preferIpAddress=true
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://eureka-server:8036/eureka/
+##eureka.instance.preferIpAddress=true
 #eureka.client.service-url.defaultZone=http://localhost:8036/eureka/
 #################
 #management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
@@ -22,3 +24,6 @@ eureka.instance.preferIpAddress=true
 #management.endpoints.web.exposure.include=health,prometheus,metrics
 #management.metrics.tags.application=${spring.application.name}
 #logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+#logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+#logging.level.com.netflix.discovery=DEBUG
