--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=job-service
+spring.application.name=JOB-SERVICE
+#################
+spring.datasource.url=jdbc:mysql://localhost:3306/job-service?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#################
+server.port=8100
