--- a/application-service/src/main/resources/application.properties
+++ b/application-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=application-service
+spring.application.name=APPLICATION-SERVICE
+spring.datasource.url=jdbc:mysql://localhost:3306/application-service?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+################
+server.port=8200
