--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -1,12 +1,26 @@
 spring.application.name=JOB-SERVICE
 #################
-spring.datasource.url=jdbc:mysql://localhost:3306/job-service?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:smartHireDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.main.allow-circular-references=false
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #################
-server.port=8100
+server.port=8080
+logging.level.root=debug
+
+#TODO : il faut ajouter des informations qui concern ta base de donnee
+#spring.datasource.url=jdbc:h2:file:./data/demo
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+
+#TODO : puisque tu as ajouter eureka il faut preciser sans emplacement
+#Parce ce qui spring commence a cherche un le DiscoveryServer a l'ajout de la dependence
+#defaultZone: http://localhost:8080/EurekaServer/eureka
