--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=USER-SERVICE
+
+#################
+spring.datasource.url=jdbc:mysql://localhost:3306/user-service?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#################
+server.port=8110
+
+
