--- a/cvanalysis-service/src/main/resources/application.properties
+++ b/cvanalysis-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=CVANALYSIS-SERVICE
+
+server.port=8220
 #################
 spring.datasource.url=jdbc:mysql://localhost:3306/cvanalysis-service?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
@@ -8,5 +10,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#################
-server.port=8220
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://eureka-server:8036/eureka/
+eureka.instance.preferIpAddress=true
+
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=health,prometheus,metrics
+management.metrics.tags.application=${spring.application.name}
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.com.netflix.discovery=DEBUG
