--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,10 +10,15 @@ spring.main.allow-circular-references=true
 #################
 server.port=8080
 #################
+
+################
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8036/eureka/
+#eureka.client.service-url.defaultZone=http://eureka-server:8036/eureka/
 eureka.instance.preferIpAddress=true
+eureka.client.service-url.defaultZone=http://localhost:8036/eureka/
+#################
+
 #################
 #management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 #management.tracing.sampling.probability=1.0
